Se agrega Swagger

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,4 @@
 swapi.api.base-url=https://www.swapi.tech/api
+
+springdoc.api-docs.title = Swapi
+springdoc.api-docs.description= Api que se integra con Swapi.
